# Call-Me-Maybe

./: Makefile  README.md  prompt  prompt_test.txt  pyproject.toml  test.py
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_calls.json
llm_sdk/: __init__.py
prompts/: args_prompt.txt
src/: __main__.py
src/core/: Trie.py  __init__.py  cli.py  engine.py  prompt.txt  validators.py
