[project]
name = "call_me_maybe"
version = "0.1.0"
description = "Function Calling System"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_sdk"]
